[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/starfield.png" type="Texture" id=1]
[ext_resource path="res://scenes/PlayerShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/Radar.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 1.2

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 384 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 20480, 20480 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 384 )

[node name="Camera2D" type="Camera2D" parent="PlayerShip"]
current = true

[node name="HUD" type="CanvasLayer" parent="PlayerShip"]

[node name="ScoreLabel" type="Label" parent="PlayerShip/HUD"]
margin_left = 24.0
margin_top = 632.0
margin_right = 120.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThrustLabel" type="Label" parent="PlayerShip/HUD"]
margin_left = 24.0
margin_top = 656.0
margin_right = 132.0
margin_bottom = 676.0
custom_fonts/font = SubResource( 3 )
text = "Thrust: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Radar" parent="PlayerShip/HUD" instance=ExtResource( 5 )]
margin_left = 512.0
margin_top = 560.0
margin_right = 768.0
margin_bottom = 752.0
